--- a/UI/styles.css
+++ b/UI/styles.css
@@ -35,7 +35,7 @@ body {
 	margin-left: 25%;
 	max-width:1080px;
 }
-.newsText{
+.news-article{
 	border-radius: 0px;
 	background-color: lightyellow;
 	box-shadow: 0 0 5px rgba(0,0,0,0.5);
@@ -44,7 +44,7 @@ body {
 	margin-right: 10px;
 	margin-bottom: 10px;
 }
-.newsContent {
+.news-article-body {
 	height: 70%;
 	font-family:"Times New Roman";
 	font-size:1.125em;
@@ -53,7 +53,7 @@ body {
 	color: gray;
 	font-size: 14px;
 }
-.newsInfo-tags {
+.news-article-tag {
 	color: gray;
 	box-shadow: 0 0 3px rgba(0,0,0,1);
 	background: lightgray;
@@ -68,21 +68,17 @@ body {
 	float: left;
 	padding-right: 10px;
 }
-.newsInfo-right{
+.news-article-info-tags{
 	height: 20%;
 	padding-left: 10px;
 	float: left;
 }
-.newsTitle{
+.news-article-body-title{
 	font-family: "Arial";
 	font-size: 1.125em;
 }
-.leftColumn {
-	width: 50%;
-	float: left;
-}
-.rightColumn{
-	width: 50%;
+.news-column {
+	width: 100%;
 	float: left;
 }
 .clearLeft{
@@ -115,11 +111,7 @@ a:hover {
 		width: 100%;
 		margin-left: 0%;
 	}
-	.leftColumn {
-		margin-top: 100px;
-		width: 100%;
-	}
-	.rightColumn{
+	.news-column {
 		margin-top: 100px;
 		width: 100%;
 	}
