--- a/UI/styles.css
+++ b/UI/styles.css
@@ -70,8 +70,13 @@ body {
 }
 .news-article-info-tags{
 	height: 20%;
+	width: 40%;
 	padding-left: 10px;
 	float: left;
+}
+.article-actions{
+	float: left;
+	margin-left: 30%;
 }
 .news-article-body-title{
 	font-family: "Arial";
